# exercicio-06-gabrielgbpn

workspace/bcc328/: bcc328.cabal  teste  teste.c  teste.l2  teste.v1
workspace/bcc328/src/L/L2/: L2.hs
workspace/bcc328/src/L/L2/Backend/: CCodegen.hs  V1Codegen.hs
workspace/bcc328/src/L/L2/Frontend/: LALR.hs  LALR.y  Lexer.hs  Lexer.x  Parser.hs  Syntax.hs  TypeCheck.hs
workspace/bcc328/src/L/L2/Interpreter/: Interp.hs
