cabal-version:      3.0
name:               bcc328
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-opts
  build-depends:
      base >=4.15 && <5 
    , mtl
    , containers
    , pretty
    , megaparsec
    , parser-combinators

  build-tool-depends: happy:happy, alex:alex

  default-language: Haskell2010
  default-extensions:
                      FlexibleContexts

library
    import: common-opts
    exposed-modules:
      Alex.LexerExample
      Happy.Exp
      Happy.ParserExample
      Megaparsec.ParserExample
      L.L0.Backend.CCodegen
      L.L0.Backend.V0Codegen
      L.L0.Frontend.Lexer
      L.L0.Frontend.Parser
      L.L0.Frontend.Syntax
      L.L0.Interpreter.Interp
      L.L1.Backend.CCodegen
      L.L1.Backend.V1Codegen
      L.L1.Frontend.Syntax
      L.L1.Frontend.RecursiveParser
      L.L1.Frontend.Lexer
      L.L1.Interpreter.Interp
      L.L2.Backend.V1Codegen
      L.L2.Backend.CCodegen
      L.L2.Frontend.LALR
      L.L2.Frontend.Lexer
      L.L2.Frontend.Syntax
      L.L2.Frontend.TypeCheck
      L.L2.Interpreter.Interp
      L.L2.Frontend.Parser
      L.L3.Backend.V1Codegen
      L.L3.Frontend.Syntax
      L.L3.Frontend.TypeCheck
      Utils.Parser
      Utils.Pretty
      Utils.Repl
      Utils.Value
      Utils.Var
      V.V0.Instr
      V.V0.Interp
      V.V0.Lexer
      V.V0.Parser
      V.V1.Instr
      V.V1.Interp
      V.V1.V1Lexer
      V.V1.V1Parser
      V.V2.Instr
      V.V2.Interp
      V.V2.V2Lexer
      V.V2.V2Parser

    other-modules:
      

    build-tool-depends:
        alex:alex
      , happy:happy
    build-depends:
        array
      , base
      , containers
      , filepath
      , megaparsec
      , mtl
      , parser-combinators
      , pretty
      , process

    hs-source-dirs:   src
    default-language: Haskell2010

executable l0
    import: common-opts
    main-is:          L0.hs
    build-depends:
        base,
        bcc328,
        filepath,
        process
    hs-source-dirs:   src/L/L0
    default-language: Haskell2010

executable l1
    import: common-opts
    main-is:          L1.hs
    build-depends:
        base,
        bcc328,
        filepath,
        process
    hs-source-dirs:   src/L/L1
    default-language: Haskell2010

executable l2
    import: common-opts
    main-is:          L2.hs
    build-depends:
        base,
        bcc328,
        filepath,
        process
    hs-source-dirs:   src/L/L2
    default-language: Haskell2010

executable l3
    import: common-opts
    main-is:          L3.hs
    build-depends:
        base,
        bcc328,
        filepath,
        process
    hs-source-dirs:   src/L/L3
    default-language: Haskell2010

executable v0
    import: common-opts
    main-is:          V0.hs
    build-depends:
        base,
        bcc328,
        filepath,
        process
    hs-source-dirs:   src/V/V0
    default-language: Haskell2010

executable v1
    import: common-opts
    main-is:          V1.hs
    build-depends:
        base,
        bcc328,
        filepath,
        process
    hs-source-dirs:   src/V/V1
    default-language: Haskell2010

executable v2
    import: common-opts
    main-is:          V2.hs
    build-depends:
        base,
        bcc328,
        filepath,
        process
    hs-source-dirs:   src/V/V2
    default-language: Haskell2010

test-suite bcc328-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:
        base,
        bcc328
    hs-source-dirs:   test
    default-language: Haskell2010
    other-extensions: FlexibleContexts
